<resources>
    <string name="app_name">InventoryApp</string>
    <string name="name_header">Name</string>
    <string name="current_header">Current</string>
    <string name="requested_header">Require</string>
    <string name="priority">Priority</string>
    <string name="units">Units</string>
    <string name="add_item">Add Item</string>
    <string name="fake_data">Add fake data</string>
    <string-array name="priority_array">
        <item>N/A</item>
        <item>Low</item>
        <item>Med</item>
        <item>High</item>
    </string-array>
</resources>
